# flux

./: .env.example  .gitignore  Cargo.toml  README.md  example-dont-change.py
config/: default.toml.example
docker/: docker-compose.yml
src/: auth.rs  lib.rs  main.rs  management.rs  settings.rs  worker.rs
src/destination/: snowflake.rs
src/snowflake/: client.rs  mapper.rs  mod.rs  store.rs
tests/: destination_test.rs  settings_test.rs  snowflake_client_test.rs  snowflake_e2e.rs
