[package]
name = "flux"
version = "0.1.0"
edition = "2024"

[dependencies]
etl = { git = "https://github.com/supabase/etl" }
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
dotenv = "0.15"
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
jsonwebtoken = "8.3"
rsa = { version = "0.9", features = ["pem", "std"] }
pkcs8 = { version = "0.10", features = ["encryption"] }
pkcs5 = { version = "0.7", features = ["des-insecure", "pbes2"] }
async-trait = "0.1"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
snowflake-jwt = "0.3.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
wiremock = "0.5"
rand = "0.8"
